Session 2: Admin Panel, Models & Database Queries

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -7,7 +7,7 @@
 <table>
     <thead>
         <tr>
-            <th>ID</th>
+            <!-- <th>ID</th> -->
             <th>Title</th>
             <th>Description</th>
         </tr>
@@ -16,8 +16,8 @@
     <tbody>
         {% for project in projects %}
         <tr>
-            <td>{{project.id}}</td>
-            <td>{% if project.topRated %} <strong>TOP</strong> {% endif %} {{project.title}}</td>
+            <!-- <td>{{project.id}}</td> -->
+            <td><a href="{% url 'project' project.id %}">{{project.title}}</a></td>
             <td>{{project.description}}</td>
         </tr>
         {% endfor %}
