--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -2,8 +2,24 @@
 
 {% block content %}
 
-<h2>Project ID: {{ project.id }}</h2>
-<h3>{{ project.title }}</h3>
+<h2>{{ project.title }}</h2>
+{% for tag in tags %}
+<span>{{tag}}</span>
+{% endfor %}
+
+<hr>
+
 <p>{{ project.description }}</p>
+
+<hr>
+
+<h3>Reviews:</h3>
+{% for review in reviews %}
+<p>{{review.value}}</p>
+<p>{{review.body}}</p>
+<p>{{review.created}}</p>
+{% endfor %}
+
+<h4>Project ID: {{ project.id }}</h4>
 
 {% endblock content %}
