--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -10,6 +10,8 @@
             <!-- <th>ID</th> -->
             <th>Title</th>
             <th>Description</th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
 
@@ -19,6 +21,8 @@
             <!-- <td>{{project.id}}</td> -->
             <td><a href="{% url 'project' project.id %}">{{project.title}}</a></td>
             <td>{{project.description}}</td>
+            <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
+            <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
