--- a/projects/templates/projects/project-form.html
+++ b/projects/templates/projects/project-form.html
@@ -4,7 +4,7 @@
 
 <h2>Create new project:</h2>
 
-<form method="POST" action="">
+<form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
 
     {{form.as_p}}
