--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<img style="max-width: 500px;" src="{{project.imageURL}}" alt="Project image">
+
 <h2>{{ project.title }}</h2>
 {% for tag in tags %}
 <span>{{tag}}</span>
