--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,6 +1,9 @@
 {% extends "main.html" %}
-
+{% load static %}
 {% block content %}
+
+<img style="width: 150px;" src="{% static 'images/profile.jpg' %}" alt="Profile picture">
+
 <h2>Hello!</h2>
 <p>Welcome to the main projects home page.</p>
 
